--- a/config-k8s.yml
+++ b/config-k8s.yml
@@ -25,10 +25,9 @@
     - name: Ensure desired config is in .bash_profile
       ansible.builtin.blockinfile:
         path: ~/.bash_profile
-        marker: "# {mark} Kubernetes aliases"
+        marker: "# {mark}: Kubernetes aliases"
         block: |
           alias k=kubectl
           alias ka="kubectl apply -f"
-        insertafter: EOF
         create: true
         mode: 0644
