--- a/config-basic.yml
+++ b/config-basic.yml
@@ -4,6 +4,10 @@
   hosts: all
   tasks:
 
+    - name: Check OS distribution
+      debug:
+        var: ansible_distribution
+
     - name: Update apt cache
       become: true
       ansible.builtin.apt:
@@ -16,14 +20,30 @@
         name:
           - git
           - python3-dev
+          - python3-pip
           - tmux
           - nano
         state: present
 
+    - name: Ensure desired config is in .bashrc
+      ansible.builtin.blockinfile:
+        path: ~/.bashrc
+        marker: "# {mark}: Ansible-managed basic aliases"
+        block: |
+          # Make sure ssh-agent is running
+          [[ -z $SSH_AUTH_SOCK ]] && eval `ssh-agent`
+          #Increase max size of .bash_history file
+          HISTSIZE=100000
+          #Force history to be appended to after each command instead of on session logout
+          PROMPT_COMMAND='history -a'
+        create: true
+        mode: 0644
+
+
     - name: Ensure desired config is in .bash_profile
       ansible.builtin.blockinfile:
         path: ~/.bash_profile
-        marker: "# {mark}: Basic aliases"
+        marker: "# {mark}: Ansible-managed basic aliases"
         block: |
           [[ -f ~/.profile ]] && source ~/.profile
           alias ll="ls -l"
@@ -38,6 +58,7 @@
         block: |
           "\e[A": history-search-backward
           "\e[B": history-search-forward
+          set colored-stats On
         create: true
         mode: 0644
 
@@ -48,5 +69,31 @@
         block: |
           setw -g mouse on # Auto-switch to scroll mode when mouse scrolling detected
           set-option -g history-limit 25000 #Increase size of scroll back history
+        create: true
+        mode: 0644
+
+    - name: Ensure .zshrc file is configured
+      ansible.builtin.blockinfile:
+        path: ~/.zshrc
+        marker: "# {mark}: Ansible-managed zsh config"
+        block: |
+
+          # Customize terminal prompt
+          PROMPT='%F{green}%*%f:%F{blue}%~%f %% ' #Time and working dir with colour
+
+          # Set up/down arrows to search history containing partially typed command
+          bindkey "^[[A" history-beginning-search-backward
+          bindkey "^[[B" history-beginning-search-forward
+
+          # Configure shell history
+          setopt HIST_IGNORE_ALL_DUPS
+          setopt INC_APPEND_HISTORY
+          setopt SHARE_HISTORY
+          SAVEHIST=100000
+
+          # Convenient aliases
+          alias la='ls -a'
+          alias ll='ls -l'
+
         create: true
         mode: 0644
