--- a/config-basic.yml
+++ b/config-basic.yml
@@ -18,11 +18,15 @@
       become: true
       ansible.builtin.package:
         name:
+          - gcc
           - git
+          - unzip
           - python3-dev
+          - python3-venv
           - python3-pip
           - tmux
           - nano
+          - less
         state: present
 
     - name: Ensure desired config is in .bashrc
@@ -30,12 +34,14 @@
         path: ~/.bashrc
         marker: "# {mark}: Ansible-managed basic aliases"
         block: |
+
           # Make sure ssh-agent is running
-          [[ -z $SSH_AUTH_SOCK ]] && eval `ssh-agent`
+          # [[ -z $SSH_AUTH_SOCK ]] && eval `ssh-agent`
           #Increase max size of .bash_history file
           HISTSIZE=100000
           #Force history to be appended to after each command instead of on session logout
           PROMPT_COMMAND='history -a'
+        
         create: true
         mode: 0644
 
@@ -45,9 +51,11 @@
         path: ~/.bash_profile
         marker: "# {mark}: Ansible-managed basic aliases"
         block: |
+
           [[ -f ~/.profile ]] && source ~/.profile
           alias ll="ls -l"
           alias la="ls -a"
+        
         create: true
         mode: 0644
 
@@ -56,9 +64,11 @@
         path: ~/.inputrc
         marker: "# {mark}: Enable history search with arrow keys"
         block: |
+
           "\e[A": history-search-backward
           "\e[B": history-search-forward
           set colored-stats On
+          
         create: true
         mode: 0644
 
@@ -67,8 +77,14 @@
         path: ~/.tmux.conf
         marker: "# {mark}: Ansible managed tmux config"
         block: |
-          setw -g mouse on # Auto-switch to scroll mode when mouse scrolling detected
-          set-option -g history-limit 25000 #Increase size of scroll back history
+
+          # Auto-switch to scroll mode when mouse scrolling detected
+          setw -g mouse on
+          # Increase size of scroll back history
+          set-option -g history-limit 25000
+          # Colorize terminal prompt correctly
+          set -g default-terminal "tmux-256color"
+
         create: true
         mode: 0644
 
@@ -95,5 +111,14 @@
           alias la='ls -a'
           alias ll='ls -l'
 
+        create: true
+        mode: 0644
+
+    - name: Ensure .vimrc file is configured
+      ansible.builtin.blockinfile:
+        path: ~/.vimrc
+        marker: "# {mark}: Ansible-managed vim config"
+        block: |
+          autocmd FileType yaml setlocal ts=2 sts=2 sw=2 expandtab
         create: true
         mode: 0644
