--- a/config-k8s-tooling.yml
+++ b/config-k8s-tooling.yml
@@ -3,43 +3,48 @@
   hosts: all
   tasks:
 
-    - name: Ensure snap is installed on Ubuntu
-      become: true
-      ansible.builtin.package:
-        name:
-          - snapd
-        state: present
-      when: ansible_distribution == 'Ubuntu'
+    - name: Ensure brew package manager is installed
+      ansible.builtin.shell: |
+        NONINTERACTIVE=1 bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 
-    - name: Ensure k8s tools are snap-installed on Ubuntu
-      become: true
-      community.general.snap:
-        name:
+    - name: Run homebrew's path setup command
+      ansible.builtin.command: /home/linuxbrew/.linuxbrew/bin/brew shellenv
+      register: brew_path_variables
+
+    - name: Ensure brew is added to path
+      ansible.builtin.blockinfile:
+        path: ~/.bashrc
+        marker: "# {mark}: Ansible managed brew path config"
+        block: |
+
+          # The following lines are the same as those output by
+          # /home/linuxbrew/.linuxbrew/bin/brew shellenv
+          {{ brew_path_variables.stdout }}
+        
+        create: true
+        mode: 0644
+
+    - name: Ensure useful kubernetes tools are installed via homebrew
+      community.general.homebrew:
+        name: 
           - kubectl
           - helm
           - kubectx
           - k9s
+          - hidetatz/tap/kubecolor
         state: present
-        classic: true
-      when: ansible_distribution == 'Ubuntu'
-
-    # - name: Ensure useful packages system packages are present
-    #   become: true
-    #   ansible.builtin.package:
-    #     name:
-    #       - kubecolor # Doesn't seem to exist on Ubuntu 20.04
-    #     state: present
 
     - name: Ensure desired config is in .bash_profile
       ansible.builtin.blockinfile:
-        path: ~/.bash_profile
+        path: ~/.bashrc
         marker: "# {mark}: Kubernetes aliases"
         block: |
-          alias k=kubectl
+          alias k=kubecolor # k=kubectl
           alias ka="kubectl apply -f"
-          # Enable kubectl auto-completion
+          # Enable auto-completions
           source <(kubectl completion bash)
-          # Extend auto-completion to 'k=kubectl' alias
+          source <(helm completion bash)
+          # Extend auto-completion to 'k=kubectl' or 'k=kubecolor' aliases
           complete -o default -F __start_kubectl k
         create: true
         mode: 0644
