--- a/configure-host.yml
+++ b/configure-host.yml
@@ -4,6 +4,20 @@
   tags: basic
   tasks:
 
+    # - name: Test
+    #   shell: |
+    #     # source ~/.bashrc
+    #     # echo "Sourced"
+    #     # echo $(pwd)
+    #     # echo $PATH
+    #     cat ~/.bashrc
+    #   register: debug_var
+
+    # - name: Debug
+    #   ansible.builtin.debug:
+    #     # var: debug_var.stdout
+    #     var: ansible_env.PATH
+
     - name: Update apt cache
       become: true
       ansible.builtin.apt:
@@ -247,16 +261,16 @@
             create: true
             mode: 0644
 
-    - name: Ensure useful kubernetes tools are installed via homebrew
-      tags: k8s
-      community.general.homebrew:
-        name:
-          - kubectl
-          - helm
-          - kubectx
-          - k9s
-          - hidetatz/tap/kubecolor
-        state: present
+    # - name: Ensure useful kubernetes tools are installed via homebrew
+    #   tags: k8s
+    #   community.general.homebrew:
+    #     name:
+    #       - kubectl
+    #       - helm
+    #       - kubectx
+    #       - k9s
+    #       - hidetatz/tap/kubecolor
+    #     state: present
 
     - name: Ensure desired config is in .bash_profile
       tags: k8s
@@ -269,6 +283,7 @@
           # Enable auto-completions
           source <(kubectl completion bash)
           source <(helm completion bash)
+          source <(k9s completion bash)
           # Extend auto-completion to 'k=kubectl' or 'k=kubecolor' aliases
           complete -o default -F __start_kubectl k
         create: true
