--- a/configure-host.yml
+++ b/configure-host.yml
@@ -211,18 +211,31 @@
             name: python-openstackclient
             virtualenv: "{{ openstack_env_dir }}"
 
-        - name: Ensure venv activate alias exists in .bashrc
+        - name: Ensure openstack aliases file exists
+          ansible.builtin.blockinfile:
+            path: ~/.openstack_aliases
+            marker: "# {mark}: Ansible managed openstack aliases"
+            block: |
+              alias osl="openstack server list"
+              alias ovl="openstack volume list"
+              alias onl="openstack network list"
+              alias ofl="openstack floating ip list"
+              alias olbl="openstack loadbalancer list"
+            create: true
+            mode: 0644
+
+        - name: Ensure env activate alias exists in .bashrc
           ansible.builtin.lineinfile:
-            line: alias openstack-env="source {{ openstack_env_dir }}/bin/activate"
+            line: alias openstack-env="source {{ openstack_env_dir }}/bin/activate && source ~/.openstack_aliases"
             path: ~/.bashrc
 
         - name: Generate openstack shell auto-completion script
-          ansible.builtin.shell: "{{ openstack_env_dir }}/bin/openstack complete > openstack-autocomplete.sh"
+          ansible.builtin.shell: "{{ openstack_env_dir }}/bin/openstack complete > ~/.openstack-autocomplete.sh"
           changed_when: false
 
         - name: Ensure openstack auto-complete script is sourced in .bashrc
           ansible.builtin.lineinfile:
-            line: source ~/openstack-autocomplete.sh
+            line: source ~/.openstack-autocomplete.sh
             path: ~/.bashrc
 
 
